--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,9 @@
+<!-- comment out for now
+
 <footer>
 
     <div class="u-full-width" id="footer">Copyright &#9400; 2022 RMC. All rights reserved.</div>
    
 </footer>
+
+-->
