--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -488,7 +488,7 @@ section {
 }
 
 /* Adding scrolling effect of background pic */
-.parallax {
+.parallax1 {
   /* The image used */
   background-image: url("../images/img_parallax1.jpg");
 
