--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -538,8 +538,9 @@ section {
   /* The image used */
   background-image: url("../images/darkbg.png");
 
-  /* Set a specific height */
-  min-height: 500px;
+  /* Set a specific width and height */
+  height: 100%;
+  min-width: 500px;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
