--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -536,7 +536,7 @@ section {
 /* Adding dark background effect of parallax pic */
 .darkbg {
   /* The image used */
-  background-image: url("../images/darkbg.png");
+  image: url("../images/darkbg.png");
 
   /* Set a specific width and height */
   height: 100%;
