--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -535,6 +535,9 @@ section {
 
 /* Adding dark background effect of parallax pic */
 .darkbg {
+   /* The image used */
+   background-image: url("../images/darkbg.png");
+
   /* Set a specific width and height */
   height: 100%;
   width: 100%;
