--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -541,7 +541,12 @@ section {
   /* Set a specific width and height */
   height: 100%;
   width: 100%;
-
+  
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* Alternate Row Colouring 
