--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -493,7 +493,7 @@ section {
 /* Adding scrolling effect of background pic */
 .parallax1 {
   /* The image used */
-  background-image: url("../images/img_parallax1.jpg");
+  background-image: url("../images/parallax1.jpg");
 
   /* Set a specific height */
   min-height: 500px;
@@ -507,7 +507,7 @@ section {
 
 .parallax2 {
   /* The image used */
-  background-image: url("../images/img_parallax2.jpg");
+  background-image: url("../images/parallax2.jpg");
 
   /* Set a specific height */
   min-height: 500px;
@@ -521,7 +521,7 @@ section {
 
 .parallax3 {
   /* The image used */
-  background-image: url("../images/img_parallax3.jpg");
+  background-image: url("../images/parallax3.jpg");
 
   /* Set a specific height */
   min-height: 500px;
