--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -584,7 +584,7 @@ section {
 
 #myBtn {
   display: none; /* Hidden by default */
-  position: absolute; /* Fixed/sticky position */
+  position: fixed; /* Fixed/sticky position */
   bottom: 20px; /* Place the button at the bottom of the page */
   right: 30px; /* Place the button 30px from the right */
   z-index: 99; /* Make sure it does not overlap */
@@ -593,7 +593,7 @@ section {
   background-color: black; /* Set a background color */
   color: white; /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
+  padding: 10px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
   font-size: 18px; /* Increase font size */
 }
