--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -589,6 +589,7 @@ section {
         bottom: 10px;
         float: none;
         right: 30px;
+        z-index: 1;
         max-height: 30px;
         max-width: 30px;
         width: 100%;
