--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -585,7 +585,7 @@ section {
 
 /*Floating Back-To-Top Button*/
     #myBtn {
-        position: fixed;
+        position: absolute;
         bottom: 10px;
         float: none;
         right: 30px;
