--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,12 @@
-<!-- comment out for now
+ comment out for now
 
 <footer>
-
-    <div class="u-full-width" id="footer">Copyright &#9400; 2022 RMC. All rights reserved.</div>
-   
+    <!-- Added BTT button -->
+    <div class="twelve columns">
+    <button id="myBtn"><a href="#top" style="color: white">Top</a></button>
+    </div>
+    <!-- <div class="u-full-width" id="footer">Copyright &#9400; 2022 RMC. All rights reserved.</div> -->
+    <br></br>
 </footer>
 
--->
+
