--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
 <footer>
     <!-- Added BTT button -->
-    <button id="myBtn"><a href="#top" style="color: white">Top</a></button>
+    <button class="container" id="myBtn"><a href="#top" style="color: white">Top</a></button>
     <!-- <div class="u-full-width" id="footer">Copyright &#9400; 2022 RMC. All rights reserved.</div> -->
     <br></br>
 </footer>
