--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="u-full-width" id="header">
-<div class="site-title"></div>
-    <div class="site-title-text animation-left">
+<div class="site-title animation-left"></div>
+    <div class="site-title-text">
         <h1 class="title">{{ site.title }}</h1>
         <p class="tagline">{{ site.tagline }}</p>
     </div>
