--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="u-full-width animation-right" id="header">
+<header class="u-full-width" id="header">
 <div class="site-title"></div>
     <div class="site-title-text">
         <h1 class="title animation-left">{{ site.title }}</h1>
