--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
-<header class="u-full-width" id="header">
+<header class="u-full-width animation-right" id="header">
 <div class="site-title"></div>
-    <div class="site-title-text">
+    <div class="site-title-text animation-left">
         <h1 class="title animation-left">{{ site.title }}</h1>
         <p class="tagline animation-left">{{ site.tagline }}</p>
     </div>
