--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
-<header class="u-full-width animation-right" id="header">
+<header class="u-full-width" id="header">
 <div class="site-title"></div>
-    <div class="site-title-text animation-left">
-        <h1 class="title animation-left">{{ site.title }}</h1>
-        <p class="tagline animation-left">{{ site.tagline }}</p>
+    <div class="animation-left">
+    <div class="site-title-text">
+        <h1 class="title">{{ site.title }}</h1>
+        <p class="tagline">{{ site.tagline }}</p>
     </div>
-    
+    </div>
 </header>
 
