--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -474,6 +474,7 @@ section {
     padding: 20px;
     font: 'PT Sans', sans-serif,;
     margin-top: 60vh;
+    position: absolute;
     
 }
 .site-title-text h1{
