--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,8 @@
 <header class="u-full-width" id="header">
 <div class="site-title"></div>
-    <div class="site-title-text">
-        <div class="animation-left">
+    <div class="site-title-text animation-left">
         <h1 class="title">{{ site.title }}</h1>
         <p class="tagline">{{ site.tagline }}</p>
-        </div>
     </div>
 </header>
 
