--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="u-full-width" id="header">
 <div class="site-title"></div>
-    <div class="site-title-text animation-right">
-        <h1 class="title">{{ site.title }}</h1>
-        <p class="tagline">{{ site.tagline }}</p>
+    <div class="site-title-text">
+        <h1 class="title animation-right">{{ site.title }}</h1>
+        <p class="tagline animation-right">{{ site.tagline }}</p>
     </div>
 </header>
 
