--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -555,6 +555,7 @@ section {
 .animation-right {
   animation-duration: 2s;
   animation-name: slidein;
+  position: relative;
 }
 
 @keyframes slidein {
