--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="u-full-width" id="header">
 <div class="site-title"></div>
     <div class="site-title-text">
-        <h1 class="title animation-left">{{ site.title }}</h1>
+        <h1 class="title">{{ site.title }}</h1>
         <p class="tagline animation-right">{{ site.tagline }}</p>
     </div>
 </header>
