--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -542,12 +542,12 @@ section {
 @keyframes slidein {
   from {
     margin-top: 100%;
-    width: 300%;
+    height: 300%;
   }
 
   to {
     margin-top: 0%;
-    width: 100%;
+    height: 100%;
   }
 }
 
@@ -596,7 +596,7 @@ section {
 @keyframes slidein {
   from {
     margin-bottom: 100%;
-    width: 300%;
+    width: 100%;
   }
 
   to {
