--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <div class="site-title"></div>
     <div class="site-title-text">
         <h1 class="title">{{ site.title }}</h1>
-        <p class="tagline animation-left">{{ site.tagline }}</p>
+        <p class="tagline">{{ site.tagline }}</p>
     </div>
 </header>
 
