--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -571,8 +571,10 @@ section {
 
 /* Add animation left */
 .animation-left {
-  animation-duration: 2s;
-  animation-name: slidein;
+  padding: 128px 0 64px 0;
+  margin: 0 50px;
+  /*animation-duration: 2s;*/
+  /*animation-name: slidein;*/
 }
 
 @keyframes slidein {
