--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -573,13 +573,13 @@ section {
 .animation-left {
   padding: 128px 0 64px 0;
   margin: 0 50px;
-  /*animation-duration: 2s;*/
-  /*animation-name: slidein;*/
+  animation-duration: 2s;
+  animation-name: slidein;
 }
 
 @keyframes slidein {
   from {
-    margin-left: 100%;
+    margin-left: -100%;
     width: 300%;
   }
 
