--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -605,6 +605,17 @@ section {
   }
 }
 
+/* Add animation fadein */
+.animation-fadein {
+  animation-name: fadein;
+  animation-duration: 3s;       
+	animation-iteration-count:infinite; 
+}
+@keyframes fadeIn { 
+	0% {opacity: 0;}
+	100% {opacity: 1;}
+}     
+
 /* Alternate Row Colouring 
 ––––––––––––––––––––––––––––––––––––––––––––––––––*/
 
