--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -608,10 +608,11 @@ section {
 /* Add animation fadein */
 .animation-fadein {
   animation-name: fadein;
-  animation-duration: 3s;       
-	animation-iteration-count:infinite; 
+  animation: fadein 3s;      
+  animation-iteration-count:infinite; 
 }
-@keyframes fadeIn { 
+
+@keyframes fadein { 
 	0% {opacity: 0;}
 	100% {opacity: 1;}
 }     
