--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -606,15 +606,22 @@ section {
 }
 
 /* Add animation fadein */
-.animation-fadein {
-  animation-duration: 5s;      
+.animation-fadein {   
+  transition: opacity 3s, visibility 3s;
   animation-iteration-count:infinite; 
   animation-name: fadein;
 }
 
 @keyframes fadeIn { 
+   from {
+	visibility: hidden;
 	0% {opacity: 0;}
+   }
+	
+   to {
+	visibility: visibility;
 	100% {opacity: 1;}
+   }
 }     
 
 /* Alternate Row Colouring 
