--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="u-full-width" id="header">
 <div class="site-title"></div>
-    <div class="site-title-text animation-fadein">
-        <h1 class="title">{{ site.title }}</h1>
+    <div class="site-title-text">
+        <h1 class="title animation-fadein">{{ site.title }}</h1>
         <p class="tagline animation-fadein">{{ site.tagline }}</p>
     </div>
 </header>
