--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="u-full-width" id="header">
 <div class="site-title"></div>
     <div class="site-title-text">
-        <h1 class="title animation-fadein">{{ site.title }}</h1>
-        <p class="tagline animation-fadein">{{ site.tagline }}</p>
+        <h1 class="title fadein">{{ site.title }}</h1>
+        <p class="tagline fadein">{{ site.tagline }}</p>
     </div>
 </header>
 
