--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -245,6 +245,29 @@ input[type="button"].button-primary:focus {
   background-color: #{{ site.colour.secondary }};
   border-color: #{{ site.colour.secondary }}; }
 
+.button-scroll,
+button-scroll,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+  display: inline-block;
+  height: 38px;
+  padding: 0 20px;
+  color: #555;
+  text-align: right;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  cursor: pointer;
+  box-sizing: border-box; }
+
 
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
