--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="u-full-width" id="header">
-<div class="site-title"></div>
-    <div class="site-title-text">
+<div class="site-title fadein"></div>
+    <div class="site-title-text fadein">
         <h1 class="title fadein">{{ site.title }}</h1>
         <p class="tagline fadein">{{ site.tagline }}</p>
     </div>
