--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -252,9 +252,10 @@ input[type="reset"],
 input[type="button"] {
   display: inline-block;
   height: 38px;
-  padding: 0 20px;
+  padding: 0 0px;
   color: #555;
-  text-align: right;
+  align: right;
+  text-align: center;
   font-size: 11px;
   font-weight: 600;
   line-height: 38px;
