--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -630,13 +630,13 @@ section {
 }
 
 /* Add animation fadein */
-.fadein {   
+.fade-in {   
   animation-duration: 3s;
   transition-timing-function: linear;
-  animation-name: fadein;
+  animation-name: fadeIn;
 }
 
-@keyframes fadein { 
+@keyframes fadeIn { 
    from {
 	0% {opacity: 0;}
    }
@@ -645,6 +645,42 @@ section {
 	100% {opacity: 1;}
    }
 }     
+
+@-moz-keyframes FadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes FadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes FadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes FadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
 /* Alternate Row Colouring 
 ––––––––––––––––––––––––––––––––––––––––––––––––––*/
