--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
-<header class="u-full-width" id="header">
+<header class="u-full-width fade-in" id="header">
 <div class="site-title"></div>
-    <div class="site-title-text fade-in">
-        <h1 class="title fade-in">{{ site.title }}</h1>
-        <p class="tagline fade-in">{{ site.tagline }}</p>
+    <div class="site-title-text">
+        <h1 class="title">{{ site.title }}</h1>
+        <p class="tagline">{{ site.tagline }}</p>
     </div>
 </header>
 
