--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="u-full-width fade-in" id="header">
+<header class="u-full-width" id="header">
 <div class="site-title"></div>
     <div class="site-title-text">
         <h1 class="title">{{ site.title }}</h1>
