--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -639,11 +639,11 @@ section {
 
 @keyframes fadeIn { 
    from {
-	0% {opacity: 0;}
+	{opacity: 0;}
    }
 	
    to {
-	100% {opacity: 1;}
+	{opacity: 1;}
    }
 }     
 
